--- a/road2AGI/requirements.txt
+++ b/road2AGI/requirements.txt
@@ -6,5 +6,8 @@ requests
 flask-heroku
 gunicorn
 stripe
+https://download.pytorch.org/whl/cpu/torch-1.2.0%2Bcpu-cp36-cp36m-manylinux1_x86_64.whl
+https://download.pytorch.org/whl/cpu/torchvision-0.4.0%2Bcpu-cp36-cp36m-manylinux1_x86_64.whl
 fastai
 imageio
+Werkzeug
