--- a/Flutter app/pubspec.yaml
+++ b/Flutter app/pubspec.yaml
@@ -2,7 +2,7 @@ name: recycling_app
 description: Recycling app using machine learning and flutter
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -11,6 +11,13 @@ dependencies:
   cupertino_icons: ^0.1.2
   image_picker: ^0.6.1+10
   torch_mobile: ^0.0.2
+  meta: ^1.1.7
+  collection: ^1.14.11
+  cloud_firestore: ^0.12.10
+  google_sign_in: ^4.0.13
+  firebase_core: ^0.4.1+5
+  firebase_auth: ^0.14.0+8
+  flutter_spinkit: "^4.0.0"
 
 dev_dependencies:
   flutter_test:
@@ -20,6 +27,7 @@ flutter:
   uses-material-design: true
   assets:
    - assets/
+   - images/
 
 
 
